--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DiabetEase</string>
+    <string name="Login">Login</string>
     <string name="Welcome">Welcome to</string>
     <string name="Start">Get Started</string>
     <string name="Diabet">Diabet</string>
@@ -31,4 +32,5 @@
     <string name="step_3">Step 3</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="step3_descript">At DiabetEase, we are committed to protecting the privacy and security of your personal information. This Privacy Policy outlines how we collect, use, disclose, and safeguard your data when you use our mobile application.</string>
+    <string name="step4_descript">Explore our meal planning, nutritional guidance, smart integrations, and more to manage your diabetes with ease and confidence.</string>
 </resources>
